--- a/angularHEFE/src/app/components/home/home.component.html
+++ b/angularHEFE/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
+<div>
+
+
 
   <mat-toolbar color="warn">
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
@@ -19,7 +22,7 @@
 
 
 <button mat-button (click)="openDialog()">Open dialog</button>
-
+</div>
 
 <!-- 
   <div id="slider" class="slider-small">
