--- a/angularHEFE/src/app/components/home/home.component.html
+++ b/angularHEFE/src/app/components/home/home.component.html
@@ -26,7 +26,7 @@
       <a href="#"><i class="fa fa-laptop"></i><span>Salas</span></a>
       <a href="#"><i class="fa fa-comments"></i><span>Chats</span></a>
       <a href="#"><i class="fa fa-info-circle"></i><span>Acerca de</span></a>
-      <a  (click)="openDialog()"><i class="fa fa-info"></i><span>Configuracion</span></a>
+      <a (click)="openDialog()"><i class="fas fa-sliders-h"></i><span>Configuracion</span></a>
   </div>
   <!--sidebar end-->
 
