agregar sala y peq ajustes a la vista de salas

--- a/angularHEFE/src/app/components/dialogs/dialog-example/dialog-example.component.html
+++ b/angularHEFE/src/app/components/dialogs/dialog-example/dialog-example.component.html
@@ -11,13 +11,13 @@
         <div class="controles-container">
           <input type="hidden" >
           <mat-form-field>
-            <input  matInput placeholder="Full Name*">
+            <input  matInput placeholder="Usuario">
           </mat-form-field>
           <mat-form-field>
             <input  matInput placeholder="Email">
           </mat-form-field>
           <mat-form-field>
-            <input  matInput placeholder="Mobile*">
+              <textarea matInput name="" id="" cols="30" rows="10" placeholder="Descripcion"></textarea>
           </mat-form-field>
           <mat-form-field>
             <input  matInput placeholder="City">
