--- a/angularHEFE/src/app/components/home/home.component.html
+++ b/angularHEFE/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="home-user">
+<div class="home-user" *ngIf="user; else Load">
 
 
   <input type="checkbox" id="check">
@@ -10,17 +10,21 @@
       <div class="left_area">
           <h3>HIPER <span>EFE</span></h3>
       </div>
-      <div class="right_area">
-          <a href="#" class="logout_btn">Cerrar Session</a>
+      <div class="right_area" >
+          <a (click)="singOut()" class="logout_btn">Sing Out</a>
       </div>
   </header>
 
   <!--header area end-->
   <!--sidebar start-->
   <div class="sidebar">
-      <div class="profile" *ngIf="user"> 
+      <div class="profile" > 
           <img *ngIf="user.photoURL" src="{{user.photoURL}}" class="profile_image" alt="{{user.displayName}}">
-          <h4>{{user.displayName}}</h4>
+          <img *ngIf="!user.photoURL" src="../../../assets/images/default.png" class="profile_image" alt="User Name">
+
+          <h4 *ngIf="user.displayName">{{user.displayName}}</h4>
+          <h4 *ngIf="!user.displayName">User Name</h4>
+
       </div>
       <a href="#"><i class="fa fa-user"></i><span>Mi Perfil</span></a>
       <a href="#"><i class="fa fa-laptop"></i><span>Salas</span></a>
@@ -30,10 +34,11 @@
   </div>
   <!--sidebar end-->
 
-  <div class="content">
+
+  <div class="content" *ngIf="rooms">
       <div id="slider" class="slider">
           <h1>Mis Salas</h1>
-          <input type="text" placeholder="Buscar por nombre de sala">
+          <input type="text" (keyup)="applyFilter($event)" placeholder="Buscar por nombre de sala">
       </div>
       <div class="clearfix"></div>
 
@@ -41,11 +46,11 @@
           <section id="contentSalas">
   
               <!--Listado salas-->
-              <div id="articles" *ngIf="topics" >
-                <div *ngFor="let topic of topics; let i = index">
+              <div id="articles" *ngIf="rooms" >
 
-                    <app-sala [topic]="topic"></app-sala>
+                <div *ngFor="let r of rooms">
 
+                    <app-sala [room]="r"></app-sala>
                 </div>
               </div>
 
@@ -53,7 +58,7 @@
           <aside id="sidebarSalas">
               <div id="nav-blog" class="sidebar-item">
                   <h3>Puedes hacer esto</h3>
-                  <a class="aneon" href="#">
+                  <a class="aneon" (click)="newRoom()">
                       <span></span>
                       <span></span>
                       <span></span>
@@ -69,6 +74,9 @@
 
 </div>
 
+<ng-template  #Load >
+    <mat-spinner align="center" style="margin-top: 20%; left: 50%;"></mat-spinner>
+</ng-template>
 <!-- 
 
 
