--- a/angularHEFE/src/app/components/sala/sala.component.html
+++ b/angularHEFE/src/app/components/sala/sala.component.html
@@ -1,13 +1,15 @@
 <article class="article-item" id="article-template">
     <div class="image-wrap">
-        <img src="assets/images/vr.jpg" alt="Paisaje" />
+        <img *ngIf="!room.photo" src="assets/images/vr.jpg" alt="Sala Image" />
+        <img *ngIf="room.photo" src="{{room.photo}}" alt="Sala Image" onError="this.src='assets/images/vr.jpg'" />
+
     </div>
 
-    <h2>{{topic.tema}}</h2>
+    <h2>{{room.nombre}}</h2>
     <span class="date">
-        Numero de participantes: 1/20
+        Numero de participantes: 1/{{room.maxParticipantes}}
     </span>
-    <a href="#">Configuracion de la sala</a>
+    <a href="#">Ver detalles</a>
 
     <div class="clearfix"></div>
 </article>
