--- a/angularHEFE/src/assets/css/styles.css
+++ b/angularHEFE/src/assets/css/styles.css
@@ -2,7 +2,32 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 div.container {
-  margin: 0px 40px;
+  margin-top: 15px;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 95%;
+  padding-left: 5%;
+}
+
+table {
+  width: 95%;
+}
+
+table th {
+  width: 60px;
+  color: black;
+  font-size: 15px;
+}
+
+.mat-toolbar {
+  background: #0c0f38;
+  color: white;
+}
+
+#search {
+  width: 100%;
 }
 
 .fill-remaining-space {
@@ -16,12 +41,27 @@ form.normal-form {
 }
 
 .controles-container {
+  width: 80%;
+}
+
+
+
+.controles-container-search {
   width: 100%;
-  padding: 5%;
 }
 
 .controles-container>* {
   width: 100%;
+}
+
+.new-room {
+
+  border: 1.5px solid #0c0f38;
+}
+
+.new-room .img img {
+  width: 150px;
+  border-radius: 100%;
 }
 
 .add-bottom-padding {
@@ -32,10 +72,22 @@ form.normal-form {
 mat-radio-group mat-radio-button {
   margin-left: 5px;
 }
+mat-form-field {
+  margin-top: 10px;
+}
+mat-form-field  img{
+  width: 80px;
+}
+
+.button-row {
+  float: right;
+  margin-top: 20px;
+}
 
 .button-row button {
   margin: 5px;
 }
+
 
 /* notification */
 snack-bar-container.success {
@@ -1146,15 +1198,13 @@ ul li a:hover {
 
 .home-user header {
   position: fixed;
-  background: #22242A;
+  background: #0c0f38;
   padding: 20px;
   width: 100%;
   height: 30px;
   box-sizing: unset !important;
 }
-.home-user{
-  background: #22242A;
-}
+
 .home-user .left_area h3 {
   color: #fff;
   margin: 0;
@@ -1189,13 +1239,14 @@ ul li a:hover {
 }
 
 .home-user .sidebar {
-  background: #2f323a;
+  background: 100%, #0c0f38;
   margin-top: 70px;
   padding-top: 30px;
   position: fixed;
   left: 0;
   width: 250px;
   height: 100%;
+  min-height: 100vh;
   transition: 0.5s;
   transition-property: left;
 }
@@ -1207,10 +1258,12 @@ ul li a:hover {
   border-radius: 100px;
   margin-bottom: 10px;
   margin-left: 30%;
+  border: solid 2.5px #1ff4ff;
+
 }
 
 .home-user .sidebar h4 {
-  color: #ccc;
+  color: white;
   margin-top: 0;
   margin-bottom: 20px;
   font-size: 15px;
@@ -1268,11 +1321,15 @@ ul li a:hover {
   width: 80px;
 }
 
+.home-user a {
+  cursor: pointer !important;
+}
+
 .home-user .content {
   margin-left: 250px;
-  background: black;
   height: 100%;
   transition: 0.5s;
+  background: black;
 }
 
 .home-user #check:checked~.content {
@@ -1295,8 +1352,8 @@ ul li a:hover {
   color: white;
   text-shadow: 0px 0px 5px #444;
   padding-top: 30px;
+  border-bottom: solid 1.5px #1ff4ff;
   /*DEGRADADO CSS*/
-  background: rgb(27, 25, 25);
 }
 
 .home-user #slider h1 {
@@ -1324,7 +1381,7 @@ ul li a:hover {
   background-position-x: 98%;
   background-position-y: center;
   margin-left: 25%;
-  
+
 }
 
 .home-user #contentSalas {
@@ -1372,7 +1429,7 @@ ul li a:hover {
 
 .sidebar-item h3 {
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 15px;
   color: white;
   margin: 0px;
   padding-bottom: 10px;
@@ -1416,19 +1473,24 @@ ul li a:hover {
   margin: 0px;
   margin-bottom: 7px;
   color: white;
+  font-size: 18px;
+  margin-top: 10px;
 }
 
 .home-user .article-item .date {
   display: block;
   width: 100%;
   color: white;
+  font-size: 13px;
+
 }
 
 .home-user .article-item a {
   display: block;
   color: white;
   text-decoration: none;
-  margin-top: 20px;
+  margin-top: 12px;
+  font-size: 11px;
 }
 
 .home-user .article-item a:hover {
