config cuentas y retoques en el diseno general

--- a/angularHEFE/src/app/components/dialogs/room/room.component.html
+++ b/angularHEFE/src/app/components/dialogs/room/room.component.html
@@ -125,7 +125,7 @@ TABLA
 
   <div class="button-row">
     <button mat-raised-button color="primary" type="submit" (click)="onSubmit()" [disabled]="newRoomForm.invalid">Guardar</button>
-    <button mat-raised-button color="warn">Cancelar</button>
+    <button mat-raised-button color="warn" (click)="onClose()">Cancelar</button>
   </div>
 
 </div>
