Uniser a sala Completa

--- a/angularHEFE/src/app/components/home/home.component.html
+++ b/angularHEFE/src/app/components/home/home.component.html
@@ -65,7 +65,16 @@
                       <span></span>
                       Crear Sala
                   </a>
+
+                  <a class="aneon" (click)="joinRoom()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    Unirme a una Sala
+                  </a>
               </div>
+              
           </aside>
 
           <div class="clearfix"></div>
