--- a/angularHEFE/src/app/components/dialogs/user-config/user-config.component.html
+++ b/angularHEFE/src/app/components/dialogs/user-config/user-config.component.html
@@ -84,7 +84,7 @@
     </form>
   </mat-step>
 
-  <mat-step *ngIf="date" [stepControl]="dateForm" errorMessage="Es requierido.">
+  <mat-step *ngIf="!date" [stepControl]="dateForm" errorMessage="Es requierido.">
     <form [formGroup]="dateForm">
       <ng-template matStepLabel>Fecha de nacimiento</ng-template>
       <mat-card>
