--- a/angularHEFE/src/app/components/inicio/inicio.component.html
+++ b/angularHEFE/src/app/components/inicio/inicio.component.html
@@ -1,6 +1,6 @@
 <div class="body">
 
-  <app-header></app-header>
+  <app-header [status]="'MenuInicio'" ></app-header>
 
 
   <div class="header-container">
