--- a/angularHEFE/src/app/components/vr/lobby/assets/assets.component.html
+++ b/angularHEFE/src/app/components/vr/lobby/assets/assets.component.html
@@ -3,29 +3,29 @@
 <a-mixin id="image" geometry="height: 2; width: 2"></a-mixin>
 <a-mixin id="delayVisible" event-set__loaded="visible: true" visible="false"></a-mixin>
 
-<img id="city" src="../../../assets/images/city.jpg">
-<img id="fondoCard" src="../../../assets/images/fondoCard.jpg">
-<img id="chooseCity" src="../../../assets/images/chooseCity.svg">
-<img id="world" src="../../../assets/images/world.svg">
-<img id="1" src="../../../assets/images/1.svg">
-<img id="2" src="../../../assets/images/2.svg">
-<img id="3" src="../../../assets/images/3.svg">
-<img id="4" src="../../../assets/images/4.svg">
-<img id="5" src="../../../assets/images/5.svg">
-<img id="6" src="../../../assets/images/6.svg">
-<img id="7" src="../../../assets/images/7.svg">
-<img id="8" src="../../../assets/images/8.svg">
-<img id="medal" src="../../../assets/images/medal.svg">
-<img id="texturaDetails" src="../../../assets/images/texturDetails.png">
-<img id="imgPreview" src="../../../assets/images/imgPreview.jpg">
-<img id="button" src="../../../assets/images/button.png">
-<img id="next" src="../../../assets/images/next2.svg">
-<img id="up" src="../../../assets/images/up.svg">
-<img id="back" src="../../../assets/images/backArrow.svg">
-<img id="exit" src="../../../assets/images/exit.svg">
-<img id="trophySilver" src="../../../assets/images/trophySilver.svg">
-<img id="trophyDiamond" src="../../../assets/images/trophyDiamond.svg">
-<img id="trophyGold" src="../../../assets/images/trophyGold.svg">
-<img id="backgroundTrophy" src="../../../assets/images/backgroundTrophys.jpg">
-<img id="moreDetails" src="../../../assets/images/nextDetails.svg">
-<img id="imgArrowgo" src="../../../assets/images/arrowUp.svg">
+<img id="city" src="../../../assets/images/vr/city.jpg">
+<img id="fondoCard" src="../../../assets/images/vr/fondoCard.jpg">
+<img id="chooseCity" src="../../../assets/images/vr/chooseCity.svg">
+<img id="world" src="../../../assets/images/vr/world.svg">
+<img id="1" src="../../../assets/images/vr/1.svg">
+<img id="2" src="../../../assets/images/vr/2.svg">
+<img id="3" src="../../../assets/images/vr/3.svg">
+<img id="4" src="../../../assets/images/vr/4.svg">
+<img id="5" src="../../../assets/images/vr/5.svg">
+<img id="6" src="../../../assets/images/vr/6.svg">
+<img id="7" src="../../../assets/images/vr/7.svg">
+<img id="8" src="../../../assets/images/vr/8.svg">
+<img id="medal" src="../../../assets/images/vr/medal.svg">
+<img id="texturaDetails" src="../../../assets/images/vr/texturDetails.png">
+<img id="imgPreview" src="../../../assets/images/vr/imgPreview.jpg">
+<img id="button" src="../../../assets/images/vr/button.png">
+<img id="next" src="../../../assets/images/vr/next2.svg">
+<img id="up" src="../../../assets/images/vr/up.svg">
+<img id="back" src="../../../assets/images/vr/backArrow.svg">
+<img id="exit" src="../../../assets/images/vr/exit.svg">
+<img id="trophySilver" src="../../../assets/images/vr/trophySilver.svg">
+<img id="trophyDiamond" src="../../../assets/images/vr/trophyDiamond.svg">
+<img id="trophyGold" src="../../../assets/images/vr/trophyGold.svg">
+<img id="backgroundTrophy" src="../../../assets/images/vr/backgroundTrophys.jpg">
+<img id="moreDetails" src="../../../assets/images/vr/nextDetails.svg">
+<img id="imgArrowgo" src="../../../assets/images/vr/arrowUp.svg">
