--- a/angularHEFE/src/app/components/home/home.component.html
+++ b/angularHEFE/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-user" *ngIf="ready && user && rooms; else Load">
 
-  <input type="checkbox" id="check" checked>
-  <app-header [status]="'principal'" [user]="user"></app-header>
+  <input type="checkbox" id="check" >
+  <app-header [status]="'principal'" ></app-header>
 
 
   <div class="content">
