--- a/angularHEFE/src/styles.css
+++ b/angularHEFE/src/styles.css
@@ -1,18 +1,276 @@
 /* You can add global styles to this file, and also import other style files */
 
-
-
-
-
 html,
 body {
   height: 100%;
   align-items: center;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
+html{
 
+}
 * {
   margin: 0;
   padding: 0;
+}
+
+.order {
+  padding-top: 100px;
+  transition: 0.5s;
+  height: 100%;
+  margin-left: 25%;
+}
+
+.home-user #check:checked~ div.order {
+  margin-left: 15%;
+}
+/*CHATS*/
+#chat-container{
+  display: grid;
+  grid: 
+      'search-container chat-title' 71px
+      'conversation-list chat-message-list' 1fr
+      'new-message-container chat-form' 78px
+      / 275px 1fr;
+
+  min-width: 700px;
+  max-width: 900px;
+  max-height: 700px;
+  width: 100%;
+  height: 80vh;
+  background: #fff;
+  border-radius: 10px;
+  border:1px solid #004BAA;
+}
+
+#search-container,
+#conversation-list,
+#new-message-container{
+  background: #004BAA;
+}
+
+#search-container {
+  display: grid;
+  align-items: center;
+  padding: 0 20px;
+  grid-area: search-container;
+  border-radius: 10px 0 0 0;
+  box-shadow: 0 1px 3px -1px black;
+  z-index: 1;
+}
+
+#search-container input{
+  color: #eee;
+  outline: none;
+  font-weight: bold;
+  border-radius: 2px;
+  height: 30px;
+  border: 0;
+  padding-left: 48px;
+  font-size: 10px !important;
+  background: url(assets/images/buscar.svg) no-repeat rgba(255, 255, 255, 0.25);
+  background-position: 15px center;
+  background-size: 20px 20px;
+}
+#search-container input::placeholder{
+  color: #ddd;
+  font-weight: bold;
+}
+#conversation-list{
+  grid-area: conversation-list;
+  overflow-y: scroll;
+
+}
+
+#new-message-container{
+  display: grid;
+  grid: 40px / 40px;
+  align-content: center;
+  grid-area: new-message-container;
+  border-top: 1px solid black;
+  border-radius: 0 0 0 10px;
+  padding: 0 15px;
+}
+
+#new-message-container a{
+  display: grid;
+  place-items: center;
+  background: #eee;
+  border-radius: 100%;
+  color: #004BAA;
+  text-decoration: none;
+  font-size: 30px;
+}
+
+#chat-title,
+#chat-form{
+  background: #eee;
+}
+
+#chat-title{
+  display: grid;
+  grid: 36px / 1fr 36px;
+  align-content: center;
+  grid-area: chat-title;
+  color: #004BAA;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 10px 0 0;
+  box-shadow: 0 1px 3px -1px rgb(42, 40, 40);
+  padding: 0 20px;
+}
+
+#chat-title > img {
+  cursor: pointer;
+  width: 20px;
+}
+
+#chat-message-list{
+  grid-area: chat-message-list;
+  display: flex;
+  flex-direction: column-reverse;
+  padding: 0 20px;
+  overflow-y: scroll;
+}
+
+.message-content{
+  display: grid;
+}
+.message-row{
+  display: grid;
+  grid-template-columns: 70%;
+  margin-bottom: 20px;
+}
+
+.message-text{
+  padding: 9px 14px;
+  font-size: 13px;
+  margin-bottom: 5px;
+}
+
+.message-time{
+  font-size: 9px;
+  color: #777;
+}
+
+.you-message .message-text{
+  background: #004BAA;
+  color: #eee;
+  border: 1px solid #004BAA;
+  border-radius: 14px 14px 0 14px;
+}
+
+.other-message .message-text{
+  background: #eee;
+  color: #111;
+  border: 1px solid #eee;
+  border-radius: 14px 14px 0 14px;
+}
+
+.you-message{
+  justify-content: end;
+  justify-items: end !important;
+
+}
+
+
+
+.other-message{
+  justify-items: start;
+}
+.other-message .message-content{
+  grid-template-columns: 48px 1fr;
+  grid-column-gap: 15px;
+}
+
+.message-row img{
+  border-radius: 100%;
+  grid-row: span 2;
+  width: 35px;
+  height: 35px;
+}
+
+#chat-form{
+  display: grid;
+  grid: 51px / 32px 1fr;
+  align-content: center;
+  align-items: center;
+  grid-gap: 15px;
+  grid-area: chat-form;
+  border-radius: 0 0 10px 0;
+  border-top: 1px solid rgb(34, 31, 31);
+  padding-left: 32px;
+  padding-right: 22px ;
+}
+
+
+#chat-form > img{
+  width: 30px;
+}
+
+#chat-form > img:hover{
+  cursor: pointer;
+}
+
+#chat-form input{
+  outline: none;
+  padding: 15px;
+  border: 2px solid #ddd;
+  color: #330;
+  border-radius: 6px;
+  font-size: 13.5px;
+}
+
+.conversation {
+  display: grid;
+  grid-template-columns: 40px 1fr max-content;
+  grid-gap: 10px;
+  color: #ddd;
+  font-size: 13px;
+  border-bottom: 1px solid #004BAA;
+  padding: 20px 20px 20px 15px;
+}
+
+.conversation.active,
+.conversation:hover{
+  background: #002C88;
+}
+
+.conversation:hover{
+  cursor: pointer;
+}
+
+.conversation > img{
+  grid-row: span 2;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+}
+
+.title-text {
+  font-weight: bold;
+  color: #eee;
+  padding-left: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.conversation-message{
+  grid-column: span 2;
+  padding-left: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.created-date{
+  color: #ddd;
+  font-size: 9px;
+}
+
+#conversation-list::-webkit-scrollbar,
+#chat-message-list::-webkit-scrollbar{
+  display: none;
+
 }
