--- a/angularHEFE/src/app/components/chats/messages/messages.component.html
+++ b/angularHEFE/src/app/components/chats/messages/messages.component.html
@@ -1,4 +1,7 @@
- <div class="message-row other-message">
+        
+     
+     
+        <div class="message-row other-message" >
           <div class="message-content">
             <img src="assets/images/profilepp.jpeg" alt="user image">
             <div class="message-text">Esque tasca ya nadie me quiere y boy a vever cloro pork
@@ -6,18 +9,13 @@
             <div class="message-time"><strong>Josue Aparicio </strong> Hace un momento</div>
           </div>
         </div>
+
         <div class="message-content">
           <div class="message-row you-message">
-            <div class="message-text">Inuil que sos</div>
+            <div class="message-text">{{mostrar}}</div>
             <div class="message-time">Hace un momento</div>
           </div>
         </div>
 
-        <div class="message-row other-message">
-          <div class="message-content">
-            <img src="assets/images/profilepp.jpeg" alt="user image">
-            <div class="message-text">Ok entendido compa</div>
-            <div class="message-time">Hace un momento</div>
-          </div>
-        </div>
+
 
