--- a/angularHEFE/src/styles.css
+++ b/angularHEFE/src/styles.css
@@ -228,7 +228,7 @@ html{
   grid-gap: 10px;
   color: #ddd;
   font-size: 13px;
-  border-bottom: 1px solid #004BAA;
+  border-bottom: 1px solid #e5eefa;
   padding: 20px 20px 20px 15px;
 }
 
@@ -257,6 +257,7 @@ html{
   text-overflow: ellipsis;
 }
 .conversation-message{
+  font-size: 11px;
   grid-column: span 2;
   padding-left: 5px;
   white-space: nowrap;
