listo para la desgracia

--- a/angularHEFE/src/app/components/dialogs/room/room.component.html
+++ b/angularHEFE/src/app/components/dialogs/room/room.component.html
@@ -55,7 +55,7 @@
             <mat-form-field class="example-full-width">
               <mat-label>URL de la imagen</mat-label>
               <input #url type="tel" matInput placeholder="https://image-example.com" formControlName="photo">
-              <mat-icon matSuffix>mode_edit</mat-icon>
+              <mat-icon matSuffix>insert_link</mat-icon>
               <mat-hint align="left">Este campo No es obligatorio. Pero si la imagen no cambia, la URL es invalida.</mat-hint>
 
             </mat-form-field>
