--- a/angularHEFE/src/styles.css
+++ b/angularHEFE/src/styles.css
@@ -147,6 +147,7 @@ html{
   padding: 9px 14px;
   font-size: 13px;
   margin-bottom: 5px;
+  cursor: pointer;
 }
 
 .message-time{
@@ -204,7 +205,9 @@ html{
   padding-right: 22px ;
 }
 
-
+#chat-form{
+  position: relative;
+}
 #chat-form > img{
   width: 30px;
 }
@@ -221,7 +224,17 @@ html{
   border-radius: 6px;
   font-size: 13.5px;
 }
+#chat-form mat-icon {
+  position: absolute;
+  top: 0;
+  left: 91%;
+  padding: 27px 0;
+  font-size: 16px;
+  color: rgb(0, 0, 0);
+  pointer-events: none;
+  transition: .5s;
 
+}
 .conversation {
   display: grid;
   grid-template-columns: 40px 1fr max-content;
