--- a/angularHEFE/src/app/components/sala/sala.component.html
+++ b/angularHEFE/src/app/components/sala/sala.component.html
@@ -6,6 +6,7 @@
     </div>
 
     <h2>{{room.nombre}}</h2>
+    <p style="color:white">Codigo de Sala: {{room.id}} </p>
     <span class="date" *ngIf="room.maxParticipantes">
         Numero de participantes: 1/{{room.maxParticipantes}}
     </span>
