--- a/angularHEFE/src/app/components/chats/messages/messages.component.html
+++ b/angularHEFE/src/app/components/chats/messages/messages.component.html
@@ -1,17 +1,26 @@
-  <div *ngIf="message; else Load">
+  <div *ngIf="message ; else Principal">
 
       <div class="message-row other-message" *ngIf="!you">
-        <div class="message-content">
-          <img src="{{message.photo}}" onError="this.src='assets/images/default.png'" alt="user image">
-          <div class="message-text" [matMenuTriggerFor]="menuRep">{{message.message}}</div>
-          <div class="message-time"><strong>{{message.displayName}} </strong>{{message.date}}</div>
+        <div class="message-content" *ngIf="user">
+          <img id="user-image-message" src="{{user.photoURL}}" onError="this.src='assets/images/default.png'" alt="user image">
+
+          <div class="message-text" [matMenuTriggerFor]="menuRep">
+            <div id="image-message" align ="center">
+              <img *ngIf="tipe == 'img'" src="{{message.image}}" onError="this.src='assets/images/default.png'" alt="image">
+            </div>
+            {{message.message}}</div>
+          <div class="message-time"><strong>{{user.displayName}},  </strong>{{date}}</div>
         </div>
       </div>
 
       <div class="message-content" *ngIf="you">
         <div class="message-row you-message">
-          <div class="message-text" [matMenuTriggerFor]="menu">{{message.message}}</div>
-          <div class="message-time">{{message.date}}</div>
+          <div class="message-text" [matMenuTriggerFor]="menu">
+            <div id="image-message" align ="center">
+              <img *ngIf="tipe == 'img'" src="{{message.image}}" onError="this.src='assets/images/default.png'" alt="image">
+            </div>
+            {{message.message}}</div>
+          <div class="message-time"> <strong>Tu, </strong>{{date}}</div>
         </div>
       </div>
 
@@ -19,27 +28,32 @@
 
 
   <mat-menu #menu="matMenu">
-    <button mat-menu-item>
+    <button mat-menu-item (click)="deleteMsg(message.id)">
       <mat-icon>delete_sweep</mat-icon>
       <span>Eliminar mensaje</span>
     </button>
-
-    <button mat-menu-item>
-      <mat-icon>edit</mat-icon>
-      <span>Editar mensaje</span>
+    <button *ngIf="tipe == 'img'" mat-menu-item (click)="verImagen(message.image, message.message, user.displayName)">
+      <mat-icon>visibility</mat-icon>
+      <span>Ver imagen</span>
     </button>
   </mat-menu>
 
 
   <mat-menu #menuRep="matMenu">
 
-    <button mat-menu-item (click)="reportMsg('ktg')">
+    <button mat-menu-item (click)="reportMsg(message.message, message.id, user.email)">
       <mat-icon>report_problem</mat-icon>
       <span>Reportar mensaje</span>
     </button>
-
+    <button *ngIf="tipe == 'img'" mat-menu-item (click)="verImagen(message.image, message.message, user.displayName)">
+      <mat-icon>visibility</mat-icon>
+      <span>Ver imagen</span>
+    </button>
   </mat-menu>
 
-  <ng-template #Load>
-    <div  style="margin-top: -100px; font-size: 25px;" align="center">@HIPEREFE</div>
+  <ng-template #Principal>
+    <div align ="center">
+      <img  id="image-principal-chat" src="assets/images/resource1.svg" alt="">
+  
+    </div>
   </ng-template>
