--- a/angularHEFE/src/app/components/header/header.component.html
+++ b/angularHEFE/src/app/components/header/header.component.html
@@ -43,7 +43,7 @@
       <h3>HIPER <span>EFE</span></h3>
     </div>
     <div class="right_area">
-      <a (click)="singOut()" class="logout_btn">Sing Out</a>
+      <a (click)="singOut()" class="logout_btn">Cerrar Sesion</a>
     </div>
   </header>
 
