Listado de Estudiantes por Sala

--- a/angularHEFE/src/app/components/sala/sala.component.html
+++ b/angularHEFE/src/app/components/sala/sala.component.html
@@ -10,7 +10,7 @@
     <span class="date" *ngIf="room.maxParticipantes">
         Numero de participantes: 1/{{room.maxParticipantes}}
     </span>
-    <a href="#">Ver detalles</a>
+    <a (click)="detailsRoom()">Ver detalles</a>
 
     <div class="clearfix"></div>
 </article>
