--- a/angularHEFE/src/app/components/details-room/details-room.component.html
+++ b/angularHEFE/src/app/components/details-room/details-room.component.html
@@ -7,32 +7,35 @@
   <div class="content">
     <div class="contentDetails">
         <mat-form-field class="searchMember">
+          <div class="codeRoom">
+            <h4>Codigo Sala: <span> {{codeRoom}} </span> </h4>
+          </div>
           <h2 class="titleDetails">Integrante de la sala</h2>
-          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Nombre..." #input>
         </mat-form-field>
 
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 tableDetails">
 
           <!-- Position Column -->
-          <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+          <ng-container matColumnDef="photoURL">
+            <th mat-header-cell *matHeaderCellDef> Foto de Perfil </th>
+            <td mat-cell *matCellDef="let element"><img src="{{element.photoURL}}"></td>
           </ng-container>
 
           <!-- Name Column -->
-          <ng-container matColumnDef="name">
+          <ng-container matColumnDef="displayName">
             <th mat-header-cell *matHeaderCellDef> Nombre </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.displayName}} </td>
           </ng-container>
 
           <!-- Weight Column -->
-          <ng-container matColumnDef="weight">
+          <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef> Email </th>
-            <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
           </ng-container>
 
           <!-- Symbol Column -->
-          <ng-container matColumnDef="symbol">
+          <ng-container matColumnDef="symbol" *ngIf="typeUser">
             <th mat-header-cell *matHeaderCellDef> Eliminar </th>
             <td mat-cell *matCellDef="let element">
               <button (click)="prueba(element)" class="buttonDelete" mat-fab color="primary"
